[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/ui_icon_map.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/ui_icon_journal.png" type="Texture" id=3]
[ext_resource path="res://ui/food_counter/food_counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/health_bar/health_bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/temperature_bar/temperature_bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/ui_icon_inventory.png" type="Texture" id=7]
[ext_resource path="res://ui/settings/settings.tscn" type="PackedScene" id=8]

[node name="HUD" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 1904.0
margin_bottom = 524.0

[node name="HealthBar" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_right = 1888.0
margin_bottom = 54.0

[node name="TemperatureBar" parent="VBoxContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true
margin_top = 58.0
margin_right = 1888.0
margin_bottom = 112.0

[node name="FoodCounter" parent="VBoxContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_top = 116.0
margin_right = 1888.0
margin_bottom = 168.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 96.0
margin_bottom = 508.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_top = 32

[node name="Icons" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_top = 32.0
margin_right = 96.0
margin_bottom = 336.0
custom_constants/separation = 8

[node name="MapButton" type="TextureButton" parent="VBoxContainer/MarginContainer/Icons"]
pause_mode = 2
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="JournalButton" type="TextureButton" parent="VBoxContainer/MarginContainer/Icons"]
pause_mode = 2
unique_name_in_owner = true
margin_top = 104.0
margin_right = 96.0
margin_bottom = 200.0
rect_min_size = Vector2( 96, 96 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="InventoryButton" type="TextureButton" parent="VBoxContainer/MarginContainer/Icons"]
pause_mode = 2
unique_name_in_owner = true
margin_top = 208.0
margin_right = 96.0
margin_bottom = 304.0
rect_min_size = Vector2( 96, 96 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Control" type="Control" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 1904.0
margin_bottom = 380.0
mouse_filter = 2

[node name="Settings" parent="Control" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = -252.0
margin_right = 0.0
margin_bottom = 100.0
grow_horizontal = 0

[connection signal="pressed" from="VBoxContainer/MarginContainer/Icons/MapButton" to="." method="_on_MapButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Icons/JournalButton" to="." method="_on_JournalButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Icons/InventoryButton" to="." method="_on_InventoryButton_pressed"]
